<resources>
    <string name="app_name">UralMebel</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="moneyOut">итоговая цена</string>
    <string name="result">итого</string>
    <string name="payed">ОПЛАТИТЬ</string>
    <string name="phone">Телефон</string>
    <string name="productName">Имя продукта</string>
    <string name="discount">скидка</string>
    <string name="discountNumber">скидка</string>
    <string name="moneyIcon">moneyIcon</string>
    <string name="productCost">цена продукта</string>
    <string name="name">Имя</string>
    <string name="secondName">Фамилия</string>
    <string name="phoneNumber">89999999999</string>
    <string name="payType">Способ оплаты</string>
    <string name="byCard">картой</string>
    <string name="byCash">наличными</string>
    <string name="iconDiscount">iconDiscount</string>
    <string name="price">цена</string>
    <string name="phoneHintNumbers">+7(9_ _ ) _ _ _ _ _ _ _</string>
    <string name="basketHeader">Корзина</string>
    <string name="basketPayButton">оплатить</string>
    <string name="Catalog">Каталог</string>
    <string name="goToBasket">Перейти в корзину</string>
    <string name="iphoneCase">IphoneCase</string>
    <string name="some_text">someText</string>
    <string name="detailed_photo_title">detailed photo</string>
    <string name="textError1">Ошибка подключения сети</string>
    <string name="textError2">Перезапустите приложение</string>
    <string name="priceDefViewed">Цена:</string>
    <string name="discountDefViewed">Скидка</string>
    <string name="moneyType">"руб."</string>
    <string name="discountSymbol">%</string>
    <string name="visitedText">Посещенные товары</string>
    <string name="stols">Столы</string>
    <string name="totalPriceText">Итоговая стоимость:</string>
    <string name="descriptionText">Описание</string>
    <string name="productMakerText">Производитель</string>
    <string name="productQualityText">Качество</string>
    <string name="priceWithDiscount">Цена со скидкой</string>
    <string name="detailedAddToBasket">Добавить в корзину</string>
    <string name="resultPrice">Итого :</string>
</resources>
