<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fadeScrollbars="false"
    android:scrollIndicators="top"
    android:scrollbarSize="3dp"
    android:scrollbarStyle="insideOverlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@color/backgroundColor"
        android:minHeight="740dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/orderHeader"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:fallbackLineSpacing="false"
            android:fontFamily="sans-serif-medium"
            android:hapticFeedbackEnabled="false"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            android:text="@string/checkout_header"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textDirection="firstStrongRtl"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/checkout_header" />


        <Button
            android:id="@+id/checkoutPayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:background="@color/black"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/payed"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/checkoutFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderHeader" />

        <EditText
            android:id="@+id/checkoutLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/secondName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/checkoutFirstName"
            app:layout_constraintStart_toStartOf="@+id/checkoutFirstName"
            app:layout_constraintTop_toBottomOf="@+id/checkoutFirstName" />

        <TextView
            android:id="@+id/phoneHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phoneHintNumbers"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="89999999999"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/checkoutLastName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/checkoutLastName"
            app:layout_constraintTop_toBottomOf="@+id/checkoutLastName" />

        <TextView
            android:id="@+id/payType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:text="@string/payType"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneHint" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="155dp"
            android:layout_height="86dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payType">

            <RadioButton
                android:id="@+id/payedCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/byCard"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/payedCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:duplicateParentState="false"
                android:focusable="auto"
                android:text="@string/byCash"
                android:textSize="18sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>