<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@color/MiddleGrey"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/basketHeader"
        style="@style/Toolbar"
        android:fallbackLineSpacing="false"
        android:fontFamily="sans-serif-medium"
        android:hapticFeedbackEnabled="false"
        android:paddingTop="2dp"
        android:textAlignment="viewStart"
        android:textDirection="firstStrongRtl"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/checkout_header"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/totalPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discount" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/discount"
        android:textColor="@color/five_percent_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/price"
        android:textColor="@color/five_percent_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/productName"
        app:layout_constraintStart_toEndOf="@+id/productName"
        app:layout_constraintTop_toTopOf="@+id/productName" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="6"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/productName"
        android:textColor="@color/five_percent_white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketHeader" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardBasketPaybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:cardBackgroundColor="@color/MiddleGrey02dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/basketPayButton"
            style="@style/Button"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/basketPayButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/resultPrice"
        android:textColor="@color/eight_percent_white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cardBasketPaybtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:text="TextView"
        android:textColor="@color/eight_percent_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPriceText"
        app:layout_constraintEnd_toStartOf="@+id/moneyType"
        app:layout_constraintTop_toTopOf="@+id/totalPriceText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/moneyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/moneyType"
        android:visibility="gone"
        android:textColor="@color/eight_percent_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>

