<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:ems="4"
        android:fontFamily="sans-serif-light"
        android:text="@string/productName"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:ems="6"
        android:fontFamily="sans-serif-light"
        android:text="@string/productCost"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/productName"
        app:layout_constraintStart_toEndOf="@+id/productName"
        app:layout_constraintTop_toTopOf="@+id/productName" />

    <TextView
        android:id="@+id/discountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:ems="3"
        android:fontFamily="sans-serif-light"
        android:text="@string/discountNumber"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/productPrice"
        app:layout_constraintStart_toEndOf="@+id/productPrice"
        app:layout_constraintTop_toTopOf="@+id/productPrice" />

    <ImageView
        android:id="@+id/deleteIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_delete_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"></ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>
